Refactor the Elm version of the score experiment

--- a/experiments/score/index.html
+++ b/experiments/score/index.html
@@ -35,10 +35,9 @@
       .score__total {
         font-size: 25px;
         position: relative;
-        /* outline: 1px solid pink; */
       }
 
-      .score__current {
+      .score__value {
         color: white;
       }
 
