--- a/experiments/merge/index.html
+++ b/experiments/merge/index.html
@@ -12,140 +12,198 @@
       }
 
       :root {
-        --width: 100px;
-        --height: 100px;
-        --gap: 20px;
-        --duration: 100ms; /* Change this to adjust the animation's speed. */
-        /* Useful for debugging purposes. */
+        --grid-gap: 20px;
+        --tile-size: 100px;
+
+        /* Normal */
+        --grid-tile-move-duration: 100ms;
+        --tile-pop-duration: 200ms;
+
+        /* Slow */
+        /* --grid-tile-move-duration: 2000ms;
+        --tile-pop-duration: 4000ms; */
+
+        --tile-appear-duration: 200ms;
+        --tile-appear-delay: 100ms;
+        --tile-pop-delay: var(--grid-tile-move-duration);
+        --tile-disappear-duration: 0s;
+        --tile-disappear-delay: calc(var(--grid-tile-move-duration) + var(--tile-pop-duration));
       }
 
       .grid {
         position: relative;
-        width: calc(5 * var(--gap) + 4 * var(--width));
-        height: calc(5 * var(--gap) + 4 * var(--height));
+
+        width: calc(5 * var(--grid-gap) + 4 * var(--tile-size));
+        height: calc(5 * var(--grid-gap) + 4 * var(--tile-size));
         background-color: grey;
       }
 
-      .tile, .tile__inner {
-        width: var(--width);
-        height: var(--height);
+      .grid__tile {
+        will-change: transform;
+        -webkit-transform: translateZ(0);
+        -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        -o-transform: translateZ(0);
+        transform: translateZ(0);
+
+        position: absolute;
+        transition: transform var(--grid-tile-move-duration) ease-in-out;
+      }
+
+      .grid__tile--1-1 {
+        transform: translate(
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size)),
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--1-2 {
+        transform: translate(
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size)),
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--1-3 {
+        transform: translate(
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size)),
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--1-4 {
+        transform: translate(
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size)),
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--2-1 {
+        transform: translate(
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size)),
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--2-2 {
+        transform: translate(
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size)),
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--2-3 {
+        transform: translate(
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size)),
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--2-4 {
+        transform: translate(
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size)),
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--3-1 {
+        transform: translate(
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size)),
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--3-2 {
+        transform: translate(
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size)),
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--3-3 {
+        transform: translate(
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size)),
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--3-4 {
+        transform: translate(
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size)),
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--4-1 {
+        transform: translate(
+          calc(1 * var(--grid-gap) + 0 * var(--tile-size)),
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--4-2 {
+        transform: translate(
+          calc(2 * var(--grid-gap) + 1 * var(--tile-size)),
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--4-3 {
+        transform: translate(
+          calc(3 * var(--grid-gap) + 2 * var(--tile-size)),
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size))
+        );
+      }
+
+      .grid__tile--4-4 {
+        transform: translate(
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size)),
+          calc(4 * var(--grid-gap) + 3 * var(--tile-size))
+        );
       }
 
       .tile {
-        position: absolute;
-        transition: transform var(--duration) ease-in-out;
+        will-change: opacity, transform;
+        -webkit-transform: translateZ(0);
+        -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        -o-transform: translateZ(0);
+        transform: translateZ(0);
+
+        width: var(--tile-size);
+        height: var(--tile-size);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 48px;
+        font-weight: bold;
+        color: white;
+        background-color: green;
       }
 
-      .tile-1-1 {
-        transform: translate(
-          calc(1 * var(--gap) + 0 * var(--width)),
-          calc(1 * var(--gap) + 0 * var(--height))
-        );
+      .tile--2 {
+        background-color: orange;
       }
 
-      .tile-1-2 {
-        transform: translate(
-          calc(2 * var(--gap) + 1 * var(--width)),
-          calc(1 * var(--gap) + 0 * var(--height))
-        );
+      .tile--4 {
+        background-color: blue;
       }
 
-      .tile-1-3 {
-        transform: translate(
-          calc(3 * var(--gap) + 2 * var(--width)),
-          calc(1 * var(--gap) + 0 * var(--height))
-        );
+      .tile--new {
+        animation: appear var(--tile-appear-duration) var(--tile-appear-delay) ease;
+        animation-fill-mode: backwards;
       }
 
-      .tile-1-4 {
-        transform: translate(
-          calc(4 * var(--gap) + 3 * var(--width)),
-          calc(1 * var(--gap) + 0 * var(--height))
-        );
+      .tile--merged {
+        animation: disappear var(--tile-disappear-duration) var(--tile-disappear-delay) linear;
+        animation-fill-mode: both;
       }
 
-      .tile-2-1 {
-        transform: translate(
-          calc(1 * var(--gap) + 0 * var(--width)),
-          calc(2 * var(--gap) + 1 * var(--height))
-        );
-      }
-
-      .tile-2-2 {
-        transform: translate(
-          calc(2 * var(--gap) + 1 * var(--width)),
-          calc(2 * var(--gap) + 1 * var(--height))
-        );
-      }
-
-      .tile-2-3 {
-        transform: translate(
-          calc(3 * var(--gap) + 2 * var(--width)),
-          calc(2 * var(--gap) + 1 * var(--height))
-        );
-      }
-
-      .tile-2-4 {
-        transform: translate(
-          calc(4 * var(--gap) + 3 * var(--width)),
-          calc(2 * var(--gap) + 1 * var(--height))
-        );
-      }
-
-      .tile-3-1 {
-        transform: translate(
-          calc(1 * var(--gap) + 0 * var(--width)),
-          calc(3 * var(--gap) + 2 * var(--height))
-        );
-      }
-
-      .tile-3-2 {
-        transform: translate(
-          calc(2 * var(--gap) + 1 * var(--width)),
-          calc(3 * var(--gap) + 2 * var(--height))
-        );
-      }
-
-      .tile-3-3 {
-        transform: translate(
-          calc(3 * var(--gap) + 2 * var(--width)),
-          calc(3 * var(--gap) + 2 * var(--height))
-        );
-      }
-
-      .tile-3-4 {
-        transform: translate(
-          calc(4 * var(--gap) + 3 * var(--width)),
-          calc(3 * var(--gap) + 2 * var(--height))
-        );
-      }
-
-      .tile-4-1 {
-        transform: translate(
-          calc(1 * var(--gap) + 0 * var(--width)),
-          calc(4 * var(--gap) + 3 * var(--height))
-        );
-      }
-
-      .tile-4-2 {
-        transform: translate(
-          calc(2 * var(--gap) + 1 * var(--width)),
-          calc(4 * var(--gap) + 3 * var(--height))
-        );
-      }
-
-      .tile-4-3 {
-        transform: translate(
-          calc(3 * var(--gap) + 2 * var(--width)),
-          calc(4 * var(--gap) + 3 * var(--height))
-        );
-      }
-
-      .tile-4-4 {
-        transform: translate(
-          calc(4 * var(--gap) + 3 * var(--width)),
-          calc(4 * var(--gap) + 3 * var(--height))
-        );
+      .tile--composite {
+        animation: pop var(--tile-pop-duration) var(--tile-pop-delay) ease;
+        animation-fill-mode: backwards;
       }
 
       @keyframes appear {
@@ -159,6 +217,17 @@
         }
       }
 
+      @keyframes disappear {
+        from {
+          opacity: 1;
+          transform: scale(1);
+        }
+        to {
+          opacity: 0;
+          transform: scale(0);
+        }
+      }
+
       @keyframes pop {
         0% {
           transform: scale(0);
@@ -169,24 +238,6 @@
         100% {
           transform: scale(1);
         }
-      }
-
-      .tile--2 .tile__inner {
-        background-color: orange;
-      }
-
-      .tile--4 .tile__inner {
-        background-color: cyan;
-      }
-
-      .tile--new .tile__inner {
-        animation: appear calc(2 * var(--duration)) ease var(--duration);
-        animation-fill-mode: backwards;
-      }
-
-      .tile--composite .tile__inner {
-        animation: pop calc(2 * var(--duration)) var(--duration) ease;
-        animation-fill-mode: backwards;
       }
     </style>
   </head>
