Review and refactor the score and score card

--- a/prototype/score-card.html
+++ b/prototype/score-card.html
@@ -41,7 +41,7 @@
 
     <div class="score-card">
       <div class="score-card__score">
-        <div class="score">
+        <div class="score score--7-digit">
           <h2 class="score__title">Score</h2>
           <div class="score__total">
             <div class="score__value">1048576</div>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="score-card__score">
-        <div class="score">
+        <div class="score score--7-digit">
           <h2 class="score__title">Best</h2>
           <div class="score__total">
             <div class="score__value">1048576</div>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="score-card__score">
-          <div class="score">
+          <div class="score score--7-digit">
             <h2 class="score__title">Best</h2>
             <div class="score__total">
               <div class="score__value">1048576</div>
@@ -88,7 +88,7 @@
     <div class="small-box">
       <div class="score-card">
         <div class="score-card__score">
-          <div class="score">
+          <div class="score score--7-digit">
             <h2 class="score__title">Score</h2>
             <div class="score__total">
               <div class="score__value">1048576</div>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="score-card__score">
-          <div class="score">
+          <div class="score score--7-digit">
             <h2 class="score__title">Best</h2>
             <div class="score__total">
               <div class="score__value">1048576</div>
