--- a/prototype/score.html
+++ b/prototype/score.html
@@ -47,5 +47,455 @@
         <div class="score__delta">+128</div>
       </div>
     </div>
+
+    <h2>Digit Length</h2>
+
+    <h3>1 Digit</h3>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">1</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">2</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">3</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">4</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">5</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">6</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">7</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">8</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">9</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>2 Digits</h3>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">00</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">11</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">99</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>3 Digits</h3>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">111</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">999</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>4 Digits</h3>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">1111</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">2222</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">3333</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">4444</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">5555</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">6666</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">7777</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">8888</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--4-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">9999</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>5 Digits</h3>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">00000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">11111</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">22222</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">33333</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">44444</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">55555</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">66666</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">77777</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">88888</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--5-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">99999</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>10 Digits</h3>
+
+    <div>
+      <div class="score score--10-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0000000000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score score--10-digit">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">2222222222</div>
+        </div>
+      </div>
+    </div>
+
+    <h3>Zeros</h3>
+
+    <p>This can be use to determine the width of the zero digit.</p>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">00</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">00000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">000000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0000000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">00000000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">000000000</div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="score">
+        <h2 class="score__title">Score</h2>
+        <div class="score__total">
+          <div class="score__value">0000000000</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
