Review and refactor the header

--- a/prototype/header.html
+++ b/prototype/header.html
@@ -25,10 +25,10 @@
 
     <div class="box">
       <header class="header">
-        <div class="header__item">
+        <div class="header__title">
           <h1 class="title">2048</h1>
         </div>
-        <div class="header__item">
+        <div class="header__score-card">
           <div class="score-card">
             <div class="score-card__score">
               <div class="score">
@@ -55,10 +55,10 @@
 
     <div class="box">
       <header class="header">
-        <div class="header__item">
+        <div class="header__title">
           <h1 class="title">2048</h1>
         </div>
-        <div class="header__item">
+        <div class="header__score-card">
           <div class="score-card">
             <div class="score-card__score">
               <div class="score">
@@ -86,10 +86,10 @@
 
     <div class="box">
       <header class="header">
-        <div class="header__item">
+        <div class="header__title">
           <h1 class="title">2048</h1>
         </div>
-        <div class="header__item">
+        <div class="header__score-card">
           <div class="score-card">
             <div class="score-card__score">
               <div class="score">
@@ -117,10 +117,10 @@
 
     <div class="box">
       <header class="header">
-        <div class="header__item">
+        <div class="header__title">
           <h1 class="title">2048</h1>
         </div>
-        <div class="header__item">
+        <div class="header__score-card">
           <div class="score-card">
             <div class="score-card__score">
               <div class="score">
