--- a/prototype/main.html
+++ b/prototype/main.html
@@ -15,7 +15,7 @@
             <div class="header__title">
               <h1 class="title">2048</h1>
             </div>
-            <div class="header__scores">
+            <div class="header__score-card">
               <div class="score-card">
                 <div class="score-card__score">
                   <div class="score">
