--- a/prototype/paragraph.html
+++ b/prototype/paragraph.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/index.css">
     <style>
       .box {
-        width: 500px;
+        min-width: 280px;
+        max-width: 500px;
       }
     </style>
   </head>
