Review and refactor the button block

--- a/prototype/button.html
+++ b/prototype/button.html
@@ -6,14 +6,25 @@
 
     <title>Button</title>
     <link rel="stylesheet" href="/index.css">
+    <style>
+      body {
+        margin-left: 10px;
+      }
+    </style>
   </head>
   <body>
     <h1>Button</h1>
 
-    <h2>Example 1</h2>
-
     <p>
       <button class="button">New Game</button>
+    </p>
+
+    <p>
+      <button class="button">Keep going</button>
+    </p>
+
+    <p>
+      <button class="button">Try again</button>
     </p>
   </body>
 </html>
