Review and refactor the introduction block

--- a/prototype/main.html
+++ b/prototype/main.html
@@ -39,10 +39,10 @@
         </div>
         <div class="main__introduction">
           <div class="introduction">
-            <div class="introduction__item">
+            <div class="introduction__paragraph">
               <p class="m0">Join the numbers and get to the <strong class="nowrap">2048 tile!</strong></p>
             </div>
-            <div class="introduction__item">
+            <div class="introduction__button">
               <button class="button">New Game</button>
             </div>
           </div>
