Review and refactor the tile, grid, and main blocks

--- a/prototype/main.html
+++ b/prototype/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/index.css">
   </head>
   <body class="body">
-    <main class="main" tabindex="-1" autofocus>
+    <main class="main" tabindex="0">
       <div class="main__body">
         <div class="main__header">
           <header class="header">
