Review and refactor the message view

--- a/prototype/grid.html
+++ b/prototype/grid.html
@@ -308,7 +308,7 @@
         <div class="grid__message">
           <div class="message">
             <h2 class="message__title">Game over!</h2>
-            <div class="message__controls">
+            <div class="message__buttons">
               <div class="message__button">
                 <button class="button">Try again</button>
               </div>
@@ -321,7 +321,7 @@
         <div class="grid__message">
           <div class="message message--success">
             <h2 class="message__title">You win!</h2>
-            <div class="message__controls">
+            <div class="message__buttons">
               <div class="message__button">
                 <button class="button">Keep going</button>
               </div>
