--- a/prototype/message.html
+++ b/prototype/message.html
@@ -29,7 +29,7 @@
     <div class="box">
       <div class="message">
         <h2 class="message__title">Game over!</h2>
-        <div class="message__controls">
+        <div class="message__buttons">
           <div class="message__button">
             <button class="button">Try again</button>
           </div>
@@ -42,7 +42,7 @@
     <div class="box">
       <div class="message message--success">
         <h2 class="message__title">You win!</h2>
-        <div class="message__controls">
+        <div class="message__buttons">
           <div class="message__button">
             <button class="button">Keep going</button>
           </div>
