Review and refactor the footer and main views

--- a/prototype/main.html
+++ b/prototype/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/index.css">
   </head>
   <body class="body">
-    <main class="main" tabindex="0">
+    <main class="main" tabindex="0" autofocus>
       <div class="main__body">
         <div class="main__header">
           <header class="header">
