--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="/favicon.ico">
+
     <title>Elm 2048</title>
     <link rel="stylesheet" href="/index.css">
   </head>
