Refactor the build scripts

--- a/html/index.html
+++ b/html/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="{{ROOT}}/favicon.ico">
 
     <title>Elm 2048</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="{{ROOT}}/index.css">
   </head>
   <body class="body">
     <div id="app"></div>
-    <script src="/app.js"></script>
+    <script src="{{ROOT}}/app.js"></script>
     <script>
       const key = "elm-2048-state";
       const value = localStorage.getItem(key);
