Update the README and change the title of the HTML page to 2048

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="{{ROOT}}/favicon.ico">
 
-    <title>Elm 2048</title>
+    <title>2048</title>
     <link rel="stylesheet" href="{{ROOT}}/index.css">
   </head>
   <body class="body">
